added test for websocketimplConstructor

--- a/pom.xml
+++ b/pom.xml
@@ -130,12 +130,28 @@
             <artifactId>mockito-all</artifactId>
             <version>1.8.4</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-testng</artifactId>
+            <version>1.5.4</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
             <version>1.5.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-easymock</artifactId>
+            <version>1.5.4</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -151,6 +167,8 @@
             <artifactId>cobertura-maven-plugin</artifactId>
             <version>2.5.2</version>
         </dependency>
+
+
     </dependencies>
 
 </project>
